' Copyright 2002-2026 CS GROUP
' Licensed to CS GROUP (CS) under one or more
' contributor license agreements.  See the NOTICE file distributed with
' this work for additional information regarding copyright ownership.
' CS licenses this file to You under the Apache License, Version 2.0
' (the "License"); you may not use this file except in compliance with
' the License.  You may obtain a copy of the License at
'
'   http://www.apache.org/licenses/LICENSE-2.0
'
' Unless required by applicable law or agreed to in writing, software
' distributed under the License is distributed on an "AS IS" BASIS,
' WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
' See the License for the specific language governing permissions and
' limitations under the License.
 
@startuml

  skinparam svek                  true
  skinparam ClassBackgroundColor  #F3EFEB/CCC9C5
  skinparam ClassArrowColor       #691616
  skinparam ClassBorderColor      #691616
  skinparam NoteBackgroundColor   #F3EFEB
  skinparam NoteBorderColor       #691616
  skinparam NoteFontColor         #691616
  skinparam ClassFontSize         11
  skinparam PackageFontSize       12
  skinparam linetype              ortho

  package org.orekit.propagation #ECEBD8 {

    interface Propagator {
        +StepHandlerMultiplexer getMultiplexer()
        +void clearStepHandlers()
        +void setStepHandler(double h, OrekitFixedStepHandler handler)
        +void setStepHandler(OrekitStepHandler handler)
    }

    package sampling #DDEBD8 {

      class StepHandlerMultiplexer {
        +void add(double h, OrekitFixedStepHandler handler)
        +void add(OrekitStepHandler handler)
        +void remove(OrekitFixedStepHandler handler)
        +void remove(OrekitStepHandler handler)
        +void clear()
        +List<OrekitStepHandler> getHandlers()
      }

      interface OrekitFixedStepHandler {
        +void init(SpacecraftState s0, AbsoluteDate t)
        +void handleStep(SpacecraftState currentState)
        +void finish(SpacecraftState finalState)
      }
      note bottom
      handle single discrete state
      end note

      interface OrekitStepHandler {
        +void init(SpacecraftState s0, AbsoluteDate t)
        +void handleStep(OrekitStepInterpolator interpolator)
        +void finish(SpacecraftState finalState)
      }
      note bottom
      handle continuous states valid throughout the step
      end note

      interface OrekitStepInterpolator {
        +SpacecraftState getCurrentState()
        +SpacecraftState getPreviousState()
        +SpacecraftState getInterpolatedState(AbsoluteDate date)
        +boolean isForward()
      }

      Propagator o--> StepHandlerMultiplexer : multiplexer
      Propagator o--> OrekitStepInterpolator
      StepHandlerMultiplexer -right->      OrekitStepInterpolator : interpolator
      StepHandlerMultiplexer --|>      OrekitStepHandler
      StepHandlerMultiplexer o--> "*" OrekitStepHandler
      StepHandlerMultiplexer o--> "*" OrekitFixedStepHandler
      OrekitStepInterpolator <-down- OrekitStepHandler : interpolator
 
    }

  }

@enduml
